--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@
           alt="showcase-wave"
           class="showcase-wave"
         />
+        <img src="./images/bg-curvy-mobile.svg" alt="showcase-wave1" class="showcase-wave-1">
       </section>
 
-      <section class="info">
+        <section class="info-section">
+         
+          <div class="info">
         <div class="access first">
           <img
             src="./images/icon-access-anywhere.svg"
@@ -110,6 +113,7 @@
             be securely stored and shared.
           </p>
         </div>
+        </div>
       </section>
 
       <section class="productivity">
@@ -140,9 +144,10 @@
           </p>
           <div class="reviewer">
           <img src="./images/profile-1.jpg" alt="" class="reviewer-img" />
-      
+            <div class="rtext">
           <p class="reviewer-name">Satish Patel</p> <br>
           <p class="reviewer-role">Founder & CEO, Huddle</p>
+          </div>
           </div>
         </div>
         <div class="review-container-2">
@@ -171,10 +176,7 @@
         </div>
       </section>
 
-    </main>
-
     <section class="footer">
-
         <div class="email">
         <div class="email-container">
           <h4 class="email-heading">Get early access today</h4>
@@ -204,11 +206,15 @@
       </div>
       <div class="two-container">
         <div class="two">
+          <div class="two-a">
           <img src="./images/icon-phone.svg" alt="" class="phone" />
           <p class="two-text">+1-543-123-4567</p>
           <br />
+          </div>
+          <div class="two-b">
           <img src="./images/icon-email.svg" alt="email" class="gmail" />
           <p class="two-text">example@fylo.com</p>
+          </div>
         </div>
       </div>
       <div class="three-container">
@@ -234,8 +240,8 @@
       </div>
       </div>
     </section>
-
-    <footer>
+    </main> 
+     <footer>
       <p class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
@@ -244,5 +250,6 @@
         <a href="https://twitter.com/koladechris">Kayode, Kolade Chris</a>.
       </p>
     </footer>
+  
   </body>
 </html>
