--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Raleway font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+
+    <!-- Open sans font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 
     <title>
       Frontend Mentor | Fylo landing page with dark theme and features grid
@@ -141,48 +144,40 @@
         </div>
       </section>
 
-      <section class="reviews">
-        <img src="./images/bg-quotes.png" alt="quote" class="review-quote" />
-        <div class="review-container-1">
-          <p class="review-text">
-            Fylo has improved our team productivity by an order of magnitude.
-            Since making the switch our team has become a well-oiled
-            collaboration machine.
-          </p>
-          <div class="reviewer">
-          <img src="./images/profile-1.jpg" alt="" class="reviewer-img" />
-            <div class="rtext">
-          <p class="reviewer-name">Satish Patel</p> <br>
-          <p class="reviewer-role">Founder & CEO, Huddle</p>
-          </div>
+      <!-- Reviews -->
+      <section class="review-section">
+        <img src="./images/bg-quotes.png" alt="quote" class="review-quote">
+<div class="reviews-container">
+        <div class="review-container">
+            <p class="review">Fylo has improved our team productivity by <br> an order if magnitude. Since making the switch <br> our team has become a well-oiled <br> collaboration machine.</p>
+            <div class="reviewer-container">
+              <img src="./images/profile-1.jpg" alt="Satish Patel" class="review-img">
+              <p> <span> Satish Patel </span> 
+              Founder & CEO, Huddie</p>
           </div>
         </div>
-        <div class="review-container-2">
-          <p class="review-text">
-            Fylo has improved our team productivity by an order of magnitude.
-            Since making the switch our team has become a well-oiled
-            collaboration machine.
-          </p>
-          <div class="reviewer">
-          <img src="./images/profile-2.jpg" alt="" class="reviewer-img" />
-          <p class="reviewer-name">Bruce McKenzie</p> <br>
-          <p class="reviewer-role">Founder & CEO, Huddle</p>
+
+        <div class="review-container">
+            <p class="review">Fylo has improved our team productivity by <br> an order if magnitude. Since making the switch <br> our team has become a well-oiled <br> collaboration machine.</p>
+            <div class="reviewer-container">
+              <img src="./images/profile-2.jpg" alt="Satish Patel" class="review-img">
+              <p> <span> Bruce McKenzie </span> 
+              Founder & CEO, Huddie</p>
           </div>
         </div>
-        <div class="review-container-3">
-          <p class="review-text">
-            Fylo has improved our team productivity by an order of magnitude.
-            Since making the switch our team has become a well-oiled
-            collaboration machine.
-          </p>
-          <div class="reviewer">
-          <img src="./images/profile-3.jpg" alt="" class="reviewer-img" />
-          <p class="reviewer-name">Iva Boyd</p>
-          <p class="reviewer-role">Founder & CEO, Huddle</p>
+
+        <div class="review-container">
+            <p class="review">Fylo has improved our team productivity by <br> an order if magnitude. Since making the switch <br> our team has become a well-oiled <br> collaboration machine.</p>
+            <div class="reviewer-container">
+              <img src="./images/profile-3.jpg" alt="Satish Patel" class="review-img">
+              <p> <span> Iva Boyd </span> 
+              Founder & CEO, Huddie</p>
           </div>
         </div>
+</div>
       </section>
 
+      <!-- Footer -->
     <section class="footer">
         <div class="email">
         <div class="email-container">
@@ -253,7 +248,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by
+        >. <br> Coded by
         <a href="https://twitter.com/koladechris">Kayode, Kolade Chris</a>.
       </p>
     </footer>
