--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 
+<!-- FOnt awesome CDN -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
+
     <title>
       Frontend Mentor | Fylo landing page with dark theme and features grid
     </title>
@@ -235,9 +238,10 @@
         </ul>
       </div>
       <div class="five-container">
-        <i class="fa fab-facebook"></i>
-        <i class="fa fab-twitter"></i>
-        <i class="fa fab-instagram"></i>
+        
+       <ion-icon name="logo-facebook"></ion-icon>
+       <ion-icon name="logo-twitter"></ion-icon>
+       <ion-icon name="logo-instagram"></ion-icon>
       </div>
       </div>
       </div>
@@ -253,5 +257,7 @@
       </p>
     </footer>
   
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
